// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitlePanel props should match the snapshot 1`] = `
Object {
  "children": <TitlePanel
    author="5d5c4546a6bab91d887207c7"
    favorites={224}
    tags={
      Array [
        "non eiusmod",
        "cupidatat sit",
        "ex",
        "sint",
        "in",
      ]
    }
    title="est tempor do anim irure culpa voluptate laboris"
  />,
  "defaultFormats": Object {},
  "defaultLocale": "en",
  "formats": Object {},
  "locale": "en",
  "messages": Object {
    "card.author": "Author: ",
    "card.points": " Points",
    "card.tags": "Tags: ",
    "loginModal.loginForm.description": "Connect with Facebook.",
    "loginModal.loginForm.loginButtonFb.FbText": "Continue with facebook",
    "loginModal.loginForm.titleText": "Login",
    "navigation.tabs.error": "Error: Can't load modes.",
    "navigation.tabs.fresh": "FRESH",
    "navigation.tabs.loading": "Loading...",
    "navigation.tabs.noMatch.code": "404 Not Found",
    "navigation.tabs.noMatch.description": "The page you were looking for doesn't exist. You may have mistyped the address or the page may have moved.",
    "navigation.tabs.random": "RANDOM",
    "navigation.tabs.top": "TOP",
    "topAppBar.searchPlaceholder": "Search...",
    "topAppBar.titleText": "OverShop",
    "topAppBar.userPanel.logInButton": "Log in",
    "topAppBar.userPanel.profileButton.option.logOut": "Log out",
    "topAppBar.userPanel.profileButton.option.myAccount": "My account",
    "topAppBar.userPanel.profileButton.option.profile": "Profile",
  },
  "onError": [Function],
  "textComponent": Symbol(react.fragment),
  "timeZone": undefined,
}
`;

exports[`TitlePanel should match the snapshot 1`] = `
.c4 {
  font-weight: 500;
  color: inherit;
  font-size: 1rem;
}

.c4 a {
  color: #4472ca;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:visited {
  color: #9999ca;
}

.c4 a:hover {
  color: #9999ca;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 a:active {
  color: #9999ca;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  color: inherit;
  font-size: inherit;
  display: inline;
  line-height: 1.5rem;
}

.c6 {
  background: transparent;
  border: none;
  display: inline-block;
  width: auto;
  border-right: none none #A3BAC3;
  border-left: none none #A3BAC3;
  color: #d1b03b;
  font-size: medium;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c2 {
  font-weight: 500;
  color: inherit;
  font-size: inherit;
}

.c2 span {
  color: #636363;
  font-weight: 500;
}

.c2 a {
  font-weight: 400;
  color: #636363;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:visited {
  color: #9c9c9c;
}

.c2 a:hover {
  color: #9c9c9c;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:active {
  color: #9c9c9c;
}

.c1 {
  text-transform: uppercase;
  font-weight: 500;
  color: #4472ca;
  font-size: 1.125rem;
}

.c0 {
  margin: 0 0.4rem;
}

<IntlProvider
  defaultFormats={Object {}}
  defaultLocale="en"
  formats={Object {}}
  locale="en"
  messages={
    Object {
      "card.author": "Author: ",
      "card.points": " Points",
      "card.tags": "Tags: ",
      "loginModal.loginForm.description": "Connect with Facebook.",
      "loginModal.loginForm.loginButtonFb.FbText": "Continue with facebook",
      "loginModal.loginForm.titleText": "Login",
      "navigation.tabs.error": "Error: Can't load modes.",
      "navigation.tabs.fresh": "FRESH",
      "navigation.tabs.loading": "Loading...",
      "navigation.tabs.noMatch.code": "404 Not Found",
      "navigation.tabs.noMatch.description": "The page you were looking for doesn't exist. You may have mistyped the address or the page may have moved.",
      "navigation.tabs.random": "RANDOM",
      "navigation.tabs.top": "TOP",
      "topAppBar.searchPlaceholder": "Search...",
      "topAppBar.titleText": "OverShop",
      "topAppBar.userPanel.logInButton": "Log in",
      "topAppBar.userPanel.profileButton.option.logOut": "Log out",
      "topAppBar.userPanel.profileButton.option.myAccount": "My account",
      "topAppBar.userPanel.profileButton.option.profile": "Profile",
    }
  }
  onError={[Function]}
  textComponent={Symbol(react.fragment)}
>
  <TitlePanel
    author="5d5c4546a6bab91d887207c7"
    favorites={224}
    tags={
      Array [
        "non eiusmod",
        "cupidatat sit",
        "ex",
        "sint",
        "in",
      ]
    }
    title="est tempor do anim irure culpa voluptate laboris"
  >
    <styled.div>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bZQynM",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "
  margin: 0 0.4rem;
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bZQynM",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c0"
        >
          <styled.div>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-EHOje",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  text-transform: uppercase;
  font-weight: 500;
  color: ",
                      [Function],
                      ";
  font-size: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-EHOje",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c1"
              >
                est tempor do anim irure culpa voluptate laboris
              </div>
            </StyledComponent>
          </styled.div>
          <styled.div
            id="tags"
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-ifAKCX",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "
  font-weight: 500;
  color: ",
                      [Function],
                      ";
  font-size: ",
                      [Function],
                      ";

  span {
    color: ",
                      [Function],
                      ";
    font-weight: 500;
  }

  a {
    font-weight: 400;
    color: ",
                      [Function],
                      ";
    text-decoration: none;
  }

  a:visited {
    color: ",
                      [Function],
                      ";
  }

  a:hover {
    color: ",
                      [Function],
                      ";
    text-decoration: underline;
  }

  a:active {
    color: ",
                      [Function],
                      ";
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-ifAKCX",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              id="tags"
            >
              <div
                className="c2"
                id="tags"
              >
                <FormattedMessage
                  defaultMessage="Tags: "
                  description="Tags describing the mode"
                  id="card.tags"
                  values={Object {}}
                >
                  Tags: 
                </FormattedMessage>
                <a
                  href="/tag/non eiusmod"
                >
                  non eiusmod
                </a>
                <span>
                  , 
                </span>
                <a
                  href="/tag/cupidatat sit"
                >
                  cupidatat sit
                </a>
                <span>
                  , 
                </span>
                <a
                  href="/tag/ex"
                >
                  ex
                </a>
                <span>
                  , 
                </span>
                <a
                  href="/tag/sint"
                >
                  sint
                </a>
                <span>
                  , 
                </span>
                <a
                  href="/tag/in"
                >
                  in
                </a>
              </div>
            </StyledComponent>
          </styled.div>
          <styled.div>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bwzfXH",
                    "isStatic": true,
                    "lastClassName": "c3",
                    "rules": Array [
                      "
  display: flex;
  justify-content: space-between;
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bwzfXH",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c3"
              >
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bdVaJa",
                          "isStatic": false,
                          "lastClassName": "c4",
                          "rules": Array [
                            "
  font-weight: 500;
  color: ",
                            [Function],
                            ";
  font-size: ",
                            [Function],
                            ";

  a {
    color: ",
                            [Function],
                            ";
    text-decoration: none;
  }

  a:visited {
    color: ",
                            [Function],
                            ";
  }

  a:hover {
    color: ",
                            [Function],
                            ";
    text-decoration: underline;
  }

  a:active {
    color: ",
                            [Function],
                            ";
  }
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bdVaJa",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c4"
                    >
                      <FormattedMessage
                        defaultMessage="Author: "
                        description="Author of the mode"
                        id="card.author"
                        values={Object {}}
                      >
                        Author: 
                      </FormattedMessage>
                      <a
                        href="/user/5d5c4546a6bab91d887207c7"
                      >
                        5d5c4546a6bab91d887207c7
                      </a>
                    </div>
                  </StyledComponent>
                </styled.div>
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-htpNat",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
  color: ",
                            [Function],
                            ";
  font-size: ",
                            [Function],
                            ";
  display: inline;
  line-height: 1.5rem;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-htpNat",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c5"
                    >
                      224
                      <styled.button
                        iconColor="#d1b03b"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex="0"
                        type="button"
                      >
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-bxivhb",
                                "isStatic": false,
                                "lastClassName": "c6",
                                "rules": Array [
                                  "
  background: transparent;
  border: none;
  display: inline-block;
  width: ",
                                  [Function],
                                  ";
  border-right: ",
                                  [Function],
                                  ";
  border-left: ",
                                  [Function],
                                  ";
  color: ",
                                  [Function],
                                  ";
  font-size: ",
                                  [Function],
                                  ";
  transform: ",
                                  [Function],
                                  ";
  cursor: pointer;
",
                                ],
                              },
                              "displayName": "styled.button",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-bxivhb",
                              "target": "button",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          iconColor="#d1b03b"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="button"
                          tabIndex="0"
                          type="button"
                        >
                          <button
                            className="c6"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                            tabIndex="0"
                            type="button"
                          >
                            <i
                              className="icon-star-empty"
                            />
                          </button>
                        </StyledComponent>
                      </styled.button>
                    </div>
                  </StyledComponent>
                </styled.div>
              </div>
            </StyledComponent>
          </styled.div>
        </div>
      </StyledComponent>
    </styled.div>
  </TitlePanel>
</IntlProvider>
`;

exports[`TitlePanel should toggle 'icon-star' class to 'icon-star-empty' after click on star button 1`] = `
Object {
  "className": "icon-star-empty",
}
`;

exports[`TitlePanel should toggle 'icon-star-empty' class to 'icon-star' after click on star button 1`] = `
Object {
  "className": "icon-star",
}
`;
